# ComputingTheoryProjectY2

./: .gitlab-ci.yml  README.md
Presentation/: NS_presentation.tex
Report/: NS_report.tex  report.bib  report.tex
Sources/: CMakeLists.txt  White-Dwarf-equation-of-states.ipynb  koonin.nb  main.cpp  nonpolytropic.hpp  nucleon.nb  polytrope.nb  polytropic.hpp
Sources/rungekutta/: rk4.hpp
Sources/test/: CMakeLists.txt  double_pendulum.cpp
Sources/test/sdl2/: CMakeLists.txt  exception.cpp  exception.hpp  font.hpp  renderer.hpp  sdl2.hpp  sdl2_image.hpp  sdl2_internal.hpp  surface.hpp  texture.hpp  window.hpp
Sources/utils/: constants.hpp  matplotlib.hpp  timer.cpp  timer.hpp  types.cpp  types.hpp  utils.hpp
